--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the verywip branch
   push:
-    branches: ["verywip"]
+    branches: ["verywip", "master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
