--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -54,7 +54,7 @@ jobs:
         # Note the current convention is to use the -S and -B options here to specify source
         # and build directories, but this is only available with CMake 3.13 and higher.
         # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_GUI=OFF -DBUILD_ZIQ=OFF -DBUILD_OPENCL=OFF -DBUILD_OPENMP=OFF -DBUILD_DOCS=ON -DCMAKE_INSTALL_PREFIX=/usr
+        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=Release -DPLUGINS_ALL=OFF -DBUILD_GUI=OFF -DBUILD_ZIQ=OFF -DBUILD_OPENCL=OFF -DBUILD_OPENMP=OFF -DBUILD_DOCS=ON -DCMAKE_INSTALL_PREFIX=/usr
 
       - name: Build
         working-directory: ${{runner.workspace}}/build
